konst/tests/misc_tests/destructure_rec_ui_tests/moved_out_tupled_struct_err.rs
struct Tuple(String, String, String);

const fn to_bar(foo: Tuple) -> (String, String, String) {
    konst::destructure_rec!{Tuple(bar, baz, qux) = foo}

    std::mem::forget(foo);

    (bar, baz, qux)
}

fn main(){}